630资料修改：大模型检测问题修改